@@ -1,3 +1,8 @@
+2002-08-22 02:34  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m: (-DPSrectclip::::): Fix rounding when
+	converting to pixel coordinates.
+
 2002-08-21 20:27  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ARTContext.m, Source/art/ARTWindowBuffer.h,
